--- a/conf/config.json
+++ b/conf/config.json
@@ -5,6 +5,10 @@
     "version": "1.0.0",
     "port": 8081
   },
+
+  "auth":{
+    "jwt_expire": 86400
+  },
   "log":{
     "level": "debug",
     "filename": "web_app.log",
