--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -3,7 +3,8 @@ app:
     mode: "dev"
     version: "1.0.0"
     port: 8081
-
+auth:
+  jwt_expire: 86400
 log:
   level: "debug"
   filename: "web_app.log"
